openshift-automation/day2/kustomize/hello-world-bg/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hello-world-bg
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
