openshift-automation/day2/kustomize/hello-world-bg/base/service-green.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-green
  namespace: hello-world-bg
spec:
  selector:
    app: hello-world-green
  ports:
  - port: 8080
