openshift-automation/day2/kustomize/hello-world-bg/base/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: hello-world
  namespace: hello-world-bg
  labels: {}
spec:
  to:
    kind: Service
    name: hello-world-blue
    weight: 100
  alternateBackends:
    - weight: 0
      kind: Service
      name: hello-world-green
  port:
#    targetPort: 8000
    targetPort: 8080
  tls: {}
  path: /
